# pbpk

./: README.md  pyproject.toml  simulate.py
comparator/: __init__.py  comparator_pbpk.py  plot_config.py
src/: __init__.py  config.py  dissolution_modes.py  flows.py  mechanistic_dissolution.py  model.py  parameters.py  pbpk.py  simulation.py
sweeps/: dh_gamma_sweep.py  dissolution_sweep.py  k_ehr_sweep.py  motility_sweep.py  plasma_sweep.py  splanchnic_sweep.py
