[project]
name = "pbpk"
version = "0.1.0"
description = "Physiologically-Based Pharmacokinetic model for Urolithin A."
readme = "README.md"
authors = [{name = "Generated Codebase", email = "kunal.nit90@gmail.come.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

# Dependencies required for running the PBPK simulation
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "pbpk",
    "parameters",
    "flows",
    "model",
    "mechanistic_dissolution",
    "dissolution_modes",
    "simulation",
]